nginx-with-ingress/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx-app
  name: nginx-service
spec:
  type: ClusterIP
  selector:
    app: nginx-app
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
